# roman_numeral_converter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  env-example  pyproject.toml  ruff.toml
docker/: Dockerfile
docs/openapi/: openapi.yaml
scripts/: run_tests.sh
src/: main.py
src/conversion/: __init__.py  dtos.py  exceptions.py  routers.py  services.py  value_objects.py
src/roman_to_integer/: __init__.py
tests/conversion/: test_convert_endpoint.py
