[project]
name = "roman-to-integer"
version = "0.1.0"
description = "A Web API to covert Roman Numerals to Integer"
authors = [
    { name = "Mdevpro78", email = "mdevpro.2020@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

readme = {file = "README.txt", content-type = "text/markdown"}


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/roman_to_integer"]

