[project]
name = "roman-to-integer"
version = "0.1.0"
description = "A Web API to covert Roman Numerals to Integer"
authors = [
    { name = "Mdevpro78", email = "mdevpro.2020@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.2",
]

requires-python = ">= 3.10"

readme = {file = "README.md", content-type = "text/markdown"}


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.6.9",
    "black>=24.10.0",
    "pyupgrade>=3.18.0",
    "pre-commit>=4.0.1",
    "add-trailing-comma>=3.1.0",
    "pytest>=8.3.3",
    "roman>=4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/roman_to_integer"]
